--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- ionic/angularjs js -->
   <script src="lib/ionic/js/ionic.bundle.js"></script>
 
+    <!--Angular JS Bootstrap-->
+    <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <link href="lib/angular-bootstrap/ui-bootstrap-csp.css" rel="stylesheet">
 
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
@@ -24,7 +27,7 @@
 </head>
 
   <body ng-app="starter">
-  <ion-nav-view> </ion-nav-view>
+  <ion-nav-view></ion-nav-view>
   </body>
 
 </html>
