--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!-- ionic/angularjs js -->
   <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="js/ng-cordova.min.js"></script>
 
     <!--Angular JS Bootstrap-->
     <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
